--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "openinference.js",
+    "name": "@arizeai/openinference",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
