--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@arizeai/openinference",
-    "version": "1.0.0",
+    "version": "0.0.0",
+    "private": true,
     "description": "",
     "main": "index.js",
     "scripts": {
