--- a/js/packages/openinference-semantic-conventions/package.json
+++ b/js/packages/openinference-semantic-conventions/package.json
@@ -3,7 +3,6 @@
     "version": "0.0.1",
     "private": false,
     "description": "This package provides OpenInference semantic conventions for tracing of LLM Applications.",
-    "main": "index.js",
     "scripts": {
         "build": "tsc --build tsconfig.json",
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +13,7 @@
     ],
     "keywords": [],
     "author": "mikyo@arize.com",
-    "license": "UNLICENSED",
+    "license": "MIT",
     "homepage": "https://github.com/arize-ai/openinference/tree/main/js/packages/openinference-semantic-conventions",
     "repository": {
         "type": "git",
