--- a/js/package.json
+++ b/js/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.0",
     "private": true,
     "description": "",
-    "main": "index.js",
+    "main": "dist/src/index.js",
+    "types": "dist/src/index.d.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
