--- a/js/package.json
+++ b/js/package.json
@@ -13,6 +13,7 @@
     "license": "UNLICENSED",
     "devDependencies": {
         "@changesets/cli": "^2.27.1",
+        "rimraf": "^5.0.5",
         "typescript": "^5.3.3"
     },
     "engines": {
