--- a/js/packages/openinference-semantic-conventions/package.json
+++ b/js/packages/openinference-semantic-conventions/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "@arizeai/openinference-semantic-conventions",
-  "version": "0.0.4",
-  "private": false,
-  "description": "This package provides OpenInference semantic conventions for tracing of LLM Applications.",
-  "scripts": {
-    "build": "tsc --build tsconfig.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "files": [
-    "dist",
-    "src"
-  ],
-  "keywords": [],
-  "author": "mikyo@arize.com",
-  "license": "MIT",
-  "homepage": "https://github.com/arize-ai/openinference/tree/main/js/packages/openinference-semantic-conventions",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Arize-ai/openinference.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Arize-ai/openinference/issues"
-  },
-  "main": "index.js"
+    "name": "@arizeai/openinference-semantic-conventions",
+    "version": "0.0.5",
+    "private": false,
+    "description": "This package provides OpenInference semantic conventions for tracing of LLM Applications.",
+    "scripts": {
+        "prebuild": "rimraf dist",
+        "build": "tsc --build tsconfig.json",
+        "clean": "tsc --build --clean tsconfig.json",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "files": [
+        "dist",
+        "src"
+    ],
+    "keywords": [],
+    "author": "mikyo@arize.com",
+    "license": "MIT",
+    "homepage": "https://github.com/arize-ai/openinference/tree/main/js/packages/openinference-semantic-conventions",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Arize-ai/openinference.git"
+    },
+    "bugs": {
+        "url": "https://github.com/Arize-ai/openinference/issues"
+    },
+    "main": "index.js"
 }
