--- a/js/package.json
+++ b/js/package.json
@@ -8,10 +8,13 @@
     },
     "keywords": [],
     "author": "mikyo@arize.com",
-    "license": "UNLICENSED",
+    "license": "Apache-2.0",
     "devDependencies": {
         "@changesets/cli": "^2.27.1",
+        "@types/jest": "^29.5.11",
+        "jest": "^29.7.0",
         "rimraf": "^5.0.5",
+        "ts-jest": "^29.1.1",
         "typescript": "^5.3.3"
     },
     "engines": {
