--- a/js/examples/openai/package.json
+++ b/js/examples/openai/package.json
@@ -1,6 +1,7 @@
 {
     "name": "openai-example",
     "version": "0.0.0",
+    "private": true,
     "description": "\"Example OpenAI integration with OpenInference\"",
     "main": "index.js",
     "scripts": {
