--- a/js/examples/openai/package.json
+++ b/js/examples/openai/package.json
@@ -5,12 +5,16 @@
     "description": "\"Example OpenAI integration with OpenInference\"",
     "main": "index.js",
     "scripts": {
+        "build": "tsc --build tsconfig.json",
+        "run": "node dist/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "mikyo@arize.com",
     "license": "Apache-2.0",
     "dependencies": {
-        "@arizeai/openinference-instrumentation-openai": "^0.0.1-rc7",
+        "@arizeai/openinference-instrumentation-openai": "^0.0.1-rc9",
+        "@opentelemetry/exporter-trace-otlp-http": "^0.46.0",
+        "@opentelemetry/exporter-trace-otlp-proto": "^0.46.0",
         "@opentelemetry/resources": "^1.19.0",
         "@opentelemetry/sdk-trace-node": "^1.19.0",
         "openai": "^4.24.1"
