--- a/js/packages/openinference-instrumentation-openai/package.json
+++ b/js/packages/openinference-instrumentation-openai/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@arizeai/openinference-instrumentation-openai",
-    "version": "0.0.1",
+    "version": "0.0.1-rc10",
     "description": "OpenInference instrumentation for OpenAI",
     "private": false,
     "main": "dist/src/index.js",
