--- a/js/examples/openai/package.json
+++ b/js/examples/openai/package.json
@@ -6,13 +6,12 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc --build tsconfig.json",
-        "run": "node dist/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node dist/index.js"
     },
     "author": "mikyo@arize.com",
     "license": "Apache-2.0",
     "dependencies": {
-        "@arizeai/openinference-instrumentation-openai": "^0.0.1-rc10",
+        "@arizeai/openinference-instrumentation-openai": "^0.0.2",
         "@opentelemetry/exporter-trace-otlp-http": "^0.46.0",
         "@opentelemetry/exporter-trace-otlp-proto": "^0.46.0",
         "@opentelemetry/resources": "^1.19.0",
