--- a/js/packages/openinference-semantic-conventions/package.json
+++ b/js/packages/openinference-semantic-conventions/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@arizeai/openinference-semantic-conventions",
-    "version": "0.0.7",
+    "version": "0.0.11",
     "private": false,
     "main": "dist/src/index.js",
     "module": "dist/esm/index.js",
@@ -17,8 +17,8 @@
         "src"
     ],
     "keywords": [],
-    "author": "mikyo@arize.com",
-    "license": "MIT",
+    "author": "oss-devs@arize.com",
+    "license": "Apache-2.0",
     "homepage": "https://github.com/arize-ai/openinference/tree/main/js/packages/openinference-semantic-conventions",
     "repository": {
         "type": "git",
