--- a/js/package.json
+++ b/js/package.json
@@ -1,24 +1,29 @@
 {
-    "name": "@arizeai/openinference",
-    "version": "0.0.0",
-    "private": true,
-    "description": "Monorepo for OpenInference Javascript Tooling",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "mikyo@arize.com",
-    "license": "Apache-2.0",
-    "devDependencies": {
-        "@changesets/cli": "^2.27.1",
-        "@types/jest": "^29.5.11",
-        "jest": "^29.7.0",
-        "rimraf": "^5.0.5",
-        "ts-jest": "^29.1.1",
-        "typescript": "^5.3.3"
-    },
-    "engines": {
-        "node": ">=10",
-        "pnpm": ">=3"
-    }
+  "name": "@arizeai/openinference",
+  "version": "0.0.0",
+  "private": true,
+  "description": "Monorepo for OpenInference Javascript Tooling",
+  "scripts": {
+    "prettier:check": "prettier --check .",
+    "prettier:write": "prettier --write ."
+  },
+  "keywords": [
+    "telemetry",
+    "llmops"
+  ],
+  "author": "oss@arize.com",
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "@changesets/cli": "^2.27.1",
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
+    "prettier": "^3.1.1",
+    "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=10",
+    "pnpm": ">=3"
+  }
 }
