--- a/js/examples/openai/package.json
+++ b/js/examples/openai/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc --build tsconfig.json",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "type:check": "tsc --noEmit"
   },
   "author": "mikyo@arize.com",
   "license": "Apache-2.0",
