--- a/.github/workflows/typescript-CI.yaml
+++ b/.github/workflows/typescript-CI.yaml
@@ -31,6 +31,9 @@ jobs:
             - name: Install Dependencies
               working-directory: ./js
               run: pnpm install --frozen-lockfile
+            - name: Run Prebuild
+              working-directory: ./js
+              run: pnpm run -r prebuild
             - name: Formatting
               working-directory: ./js
               run: |
