ci default working directory

--- a/.github/workflows/python-CI.yaml
+++ b/.github/workflows/python-CI.yaml
@@ -13,6 +13,10 @@ concurrency:
   group: test-python-${{ github.head_ref }}
   cancel-in-progress: true
 
+defaults:
+  run:
+    working-directory: ./python
+    
 jobs:
   ci:
     name: CI Python
