--- a/js/package.json
+++ b/js/package.json
@@ -8,6 +8,7 @@
     "prettier:write": "prettier --write .",
     "type:check": "pnpm run -r type:check",
     "lint": "eslint . --ext .ts",
+    "ci:version": "pnpm changeset version",
     "ci:publish": "pnpm publish -r"
   },
   "keywords": [
