--- a/js/package.json
+++ b/js/package.json
@@ -8,10 +8,8 @@
     "prettier:write": "prettier --write .",
     "type:check": "pnpm run -r type:check",
     "lint": "eslint . --ext .ts",
-    "prebuild": "pnpm run -r prebuild",
-    "build": "pnpm run -r build",
     "ci:version": "pnpm changeset version",
-    "ci:publish": "pnpm run prebuild && pnpm run build && pnpm publish -r"
+    "ci:publish": "pnpm run -r prebuild && pnpm run -r build && git diff --exit-code && pnpm run publish -r"
   },
   "keywords": [
     "telemetry",
