--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,12 +6,20 @@
   "separate-pull-requests": true,
   "sequential-calls": true,
   "packages": {
+    "js/packages/openinference-semantic-conventions": {
+      "package-name": "js-openinference-semantic-conventions",
+      "release-type": "node"
+    },
+    "js/packages/openinference-instrumentation-openai": {
+      "package-name": "js-openinference-instrumentation-openai",
+      "release-type": "node"
+    },
     "python/openinference-semantic-conventions": {
-      "package-name": "openinference-semantic-conventions",
+      "package-name": "python-openinference-semantic-conventions",
       "release-type": "python"
     },
     "python/instrumentation/openinference-instrumentation-openai": {
-      "package-name": "openinference-instrumentation-openai",
+      "package-name": "python-openinference-instrumentation-openai",
       "release-type": "python"
     }
   }
