--- a/.github/workflows/typescript-publish.yaml
+++ b/.github/workflows/typescript-publish.yaml
@@ -20,6 +20,7 @@ jobs:
               with:
                   node-version: 16
                   registry-url: "https://registry.npmjs.org"
+                  scope: "@arizeai"
             - name: Setup PNPM
               uses: pnpm/action-setup@v2
               with:
