--- a/js/package.json
+++ b/js/package.json
@@ -8,6 +8,7 @@
     "prettier:write": "prettier --write .",
     "type:check": "pnpm run -r type:check",
     "lint": "eslint . --ext .ts",
+    "test": "./node_modules/jest/bin/jest.js",
     "ci:version": "pnpm changeset version",
     "ci:publish": "pnpm run -r prebuild && pnpm run -r build && pnpm publish -r --access public"
   },
