--- a/.github/workflows/typescript-publish.yaml
+++ b/.github/workflows/typescript-publish.yaml
@@ -21,6 +21,7 @@ jobs:
                   node-version: 16
                   registry-url: "https://registry.npmjs.org"
                   scope: "@arizeai"
+                  always-auth: true
             - name: Echo npmrc
               run: cat $NPM_CONFIG_USERCONFIG
             - name: Setup PNPM
