--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,18 +3,17 @@ isolated_build = True
 skipsdist = True
 skip_missing_interpreters = True
 envlist =
-  ruff
-  mypy-openai
   py3{8,11}-test-openai
 
 
 [testenv]
 package = wheel
 wheel_build_env = .pkg
+allowlist_externals = git
 deps =
   test: pytest == 7.4.4
-  ruff: ruff == 0.1.11
-  mypy: mypy == 1.8.0
+  test: ruff == 0.1.11
+  test: mypy == 1.8.0
 changedir =
   openai: instrumentation/openinference-instrumentation-openai/
 commands_pre =
@@ -23,7 +22,8 @@ commands_pre =
   openai: pip install {toxinidir}/openinference-semantic-conventions
   openai: pip install {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
 commands =
+  test: ruff format .
+  test: ruff --fix .
+  test: git diff --exit-code
+  test: mypy --explicit-package-bases src --config-file {toxinidir}/mypy.ini
   test: pytest {posargs}
-  ruff: ruff format .
-  ruff: ruff --fix .
-  mypy: mypy --explicit-package-bases src --config-file {toxinidir}/mypy.ini
