--- a/.github/workflows/typescript-publish.yaml
+++ b/.github/workflows/typescript-publish.yaml
@@ -18,12 +18,10 @@ jobs:
             - name: setup node.js
               uses: actions/setup-node@v3
               with:
-                  node-version: 16
-                  registry-url: "https://registry.npmjs.org"
+                  node-version: 20
+                  registry-url: https://registry.npmjs.org/
                   scope: "@arizeai"
                   always-auth: true
-            - name: Echo npmrc
-              run: cat $NPM_CONFIG_USERCONFIG
             - name: Setup PNPM
               uses: pnpm/action-setup@v2
               with:
