--- a/python/tox.ini
+++ b/python/tox.ini
@@ -5,7 +5,6 @@ skip_missing_interpreters = True
 envlist =
   py3{8,11}-test-openai
 
-
 [testenv]
 package = wheel
 wheel_build_env = .pkg
@@ -23,6 +22,7 @@ commands_pre =
   openai: pip install {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
 commands =
   test: ruff format .
+  test: git diff --exit-code
   test: ruff --fix .
   test: git diff --exit-code
   test: mypy --explicit-package-bases src --config-file {toxinidir}/mypy.ini
