--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,7 +3,7 @@ isolated_build = True
 skipsdist = True
 skip_missing_interpreters = True
 envlist =
-  py3{8,11}-test-openai
+  py3{8,11}-test-{semconv,openai}
 
 [testenv]
 package = wheel
@@ -15,6 +15,7 @@ deps =
   test: mypy == 1.8.0
 changedir =
   openai: instrumentation/openinference-instrumentation-openai/
+  semconv: openinference-semantic-conventions
 commands_pre =
   py3{8,11}: python -m pip install -U pip setuptools wheel
 ; FIXME: installation below for semantic conventions can be removed once the package is stable and published
