--- a/.github/workflows/typescript-publish.yaml
+++ b/.github/workflows/typescript-publish.yaml
@@ -31,13 +31,9 @@ jobs:
             - name: Install Dependencies
               working-directory: ./js
               run: pnpm install --frozen-lockfile
-            - name: Creating .npmrc
-              run: |
-                  cat << EOF > "$HOME/.npmrc"
-                    //registry.npmjs.org/:_authToken=$NPM_TOKEN
-                  EOF
-              env:
-                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+            - name: NPM login
+              working-directory: ./js
+              run: pnpm login --registry=https://registry.npmjs.org/ --scope=@arizeai --always-auth
             - name: create and publish versions
               uses: changesets/action@v1
               with:
