--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,28 +3,31 @@ isolated_build = True
 skipsdist = True
 skip_missing_interpreters = True
 envlist =
-  py3{8,11}-test-{semconv,openai}
+  py3{8,11}-ci-{semconv,openai}
 
 [testenv]
 package = wheel
 wheel_build_env = .pkg
 allowlist_externals = git
 deps =
-  test: pytest == 7.4.4
-  test: ruff == 0.1.11
-  test: mypy == 1.8.0
+  -r dev-requirements.txt
 changedir =
+  semconv: openinference-semantic-conventions/
   openai: instrumentation/openinference-instrumentation-openai/
-  semconv: openinference-semantic-conventions
 commands_pre =
   py3{8,11}: python -m pip install -U pip setuptools wheel
+  semconv: pip install {toxinidir}/openinference-semantic-conventions
 ; FIXME: installation below for semantic conventions can be removed once the package is stable and published
   openai: pip install {toxinidir}/openinference-semantic-conventions
   openai: pip install {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
 commands =
-  test: ruff format .
-  test: git diff --exit-code
-  test: ruff --fix .
-  test: git diff --exit-code
-  test: mypy --explicit-package-bases src --config-file {toxinidir}/mypy.ini
+  ruff: ruff format .
+  ruff: ruff --fix .
+  mypy: mypy --explicit-package-bases src --config-file {toxinidir}/mypy.ini
   test: pytest {posargs}
+  ci: ruff format .
+  ci: git diff --exit-code
+  ci: ruff --fix .
+  ci: git diff --exit-code
+  ci: mypy --explicit-package-bases src --config-file {toxinidir}/mypy.ini
+  ci: pytest {posargs}
