--- a/.github/workflows/typescript-publish.yaml
+++ b/.github/workflows/typescript-publish.yaml
@@ -22,6 +22,8 @@ jobs:
                   registry-url: https://registry.npmjs.org/
                   scope: "@arizeai"
                   always-auth: true
+              env:
+                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
             - name: Setup PNPM
               uses: pnpm/action-setup@v2
               with:
@@ -40,6 +42,6 @@ jobs:
                   publish: pnpm ci:publish
                   cwd: "./js"
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
