--- a/.github/workflows/python-CI.yaml
+++ b/.github/workflows/python-CI.yaml
@@ -20,7 +20,5 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.8"
-      - name: Install tox
-        run: pip install tox==4.11.4
-      - name: Run tox
-        run: tox run-parallel
+      - run: pip install tox==4.11.4
+      - run: tox run-parallel
