--- a/python/tox.ini
+++ b/python/tox.ini
@@ -30,4 +30,4 @@ commands =
   ci: ruff --fix .
   ci: git diff --exit-code
   ci: mypy --explicit-package-bases src --config-file {toxinidir}/mypy.ini
-  ci: pytest {posargs}
+  ci: pytest
