--- a/.github/workflows/python-CI.yaml
+++ b/.github/workflows/python-CI.yaml
@@ -19,8 +19,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: |
-            - "3.8"
-            - 3.11
+          python-version: "3.x"
       - run: pip install tox==4.11.4
       - run: tox run-parallel
