--- a/python/tox.ini
+++ b/python/tox.ini
@@ -22,11 +22,11 @@ commands_pre =
 commands =
   ruff: ruff format .
   ruff: ruff --fix .
-  mypy: mypy --explicit-package-bases src --config-file {toxinidir}/mypy.ini
+  mypy: mypy --config-file {toxinidir}/mypy.ini --explicit-package-bases {posargs:src}
   test: pytest {posargs}
   ci: ruff format .
   ci: git diff --exit-code
   ci: ruff --fix .
   ci: git diff --exit-code
-  ci: mypy --explicit-package-bases src --config-file {toxinidir}/mypy.ini
+  ci: mypy --config-file {toxinidir}/mypy.ini --explicit-package-bases src
   ci: pytest
