--- a/python/tox.ini
+++ b/python/tox.ini
@@ -2,7 +2,8 @@
 isolated_build = True
 skipsdist = True
 envlist =
-  py3{8,11}-ci-{semconv,openai}
+  py3{8,11}-ci-semconv
+  py3{8,11}-ci-openai
 
 [testenv]
 package = wheel
