--- a/python/tox.ini
+++ b/python/tox.ini
@@ -19,13 +19,13 @@ commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
   openai: pip install {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
 commands =
-  ruff: ruff format .
-  ruff: ruff --fix .
+  ruff: ruff format . --config {toxinidir}/ruff.toml
+  ruff: ruff . --fix --config {toxinidir}/ruff.toml
   mypy: mypy --config-file {toxinidir}/mypy.ini --explicit-package-bases {posargs:src}
   test: pytest {posargs}
-  ci: ruff format .
+  ci: ruff format . --config {toxinidir}/ruff.toml
   ci: git diff --exit-code
-  ci: ruff --fix .
+  ci: ruff . --fix --config {toxinidir}/ruff.toml
   ci: git diff --exit-code
   ci: mypy --config-file {toxinidir}/mypy.ini --explicit-package-bases src
   ci: pytest
