--- a/python/tox.ini
+++ b/python/tox.ini
@@ -28,4 +28,4 @@ commands =
   ci: ruff . --fix --config {toxinidir}/ruff.toml
   ci: git diff --exit-code
   ci: mypy --config-file {toxinidir}/mypy.ini --explicit-package-bases src
-  ci: pytest
+  ci: pytest tests
