--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,12 +3,11 @@ isolated_build = True
 skipsdist = True
 envlist =
   py3{8,11}-ci-semconv
-  py3{8,11}-ci-openai
+  py3{8,11}-ci-{openai,openai-latest}
 
 [testenv]
 package = wheel
 wheel_build_env = .pkg
-allowlist_externals = git
 deps =
   -r dev-requirements.txt
 changedir =
@@ -17,14 +16,13 @@ changedir =
 commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
   openai: pip install {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
+  openai-latest: pip install -U openai
 commands =
   ruff: ruff format . --config {toxinidir}/ruff.toml
-  ruff: ruff . --fix --config {toxinidir}/ruff.toml
+  ruff: ruff check . --fix --config {toxinidir}/ruff.toml
   mypy: mypy --config-file {toxinidir}/mypy.ini --explicit-package-bases {posargs:src}
-  test: pytest {posargs}
-  ci: ruff format . --config {toxinidir}/ruff.toml
-  ci: git diff --exit-code
-  ci: ruff . --fix --config {toxinidir}/ruff.toml
-  ci: git diff --exit-code
+  test: pytest {posargs:tests}
+  ci: ruff format . --diff --config {toxinidir}/ruff.toml
+  ci: ruff check . --diff --config {toxinidir}/ruff.toml
   ci: mypy --config-file {toxinidir}/mypy.ini --explicit-package-bases src
   ci: pytest tests
