--- a/python/instrumentation/openinference-instrumentation-openai/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-openai/pyproject.toml
@@ -38,6 +38,7 @@ instruments = [
 test = [
   "openai == 1.0.0",
   "opentelemetry-sdk",
+  "opentelemetry-instrumentation-httpx",
   "respx",
   "numpy",
 ]
