chore: fix ruff check

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -23,6 +23,6 @@ commands =
   mypy: mypy --config-file {toxinidir}/mypy.ini --explicit-package-bases {posargs:src}
   test: pytest {posargs:tests}
   ci: ruff format . --diff --config {toxinidir}/ruff.toml
-  ci: ruff check . --diff --config {toxinidir}/ruff.toml
+  ci: ruff check . --no-fix --config {toxinidir}/ruff.toml
   ci: mypy --config-file {toxinidir}/mypy.ini --explicit-package-bases src
   ci: pytest tests
