--- a/python/tox.ini
+++ b/python/tox.ini
@@ -4,6 +4,7 @@ skipsdist = True
 envlist =
   py3{8,11}-ci-semconv
   py3{8,11}-ci-{openai,openai-latest}
+  py3{8,11}-ci-{llama_index,llama_index-latest}
 
 [testenv]
 package = wheel
@@ -13,10 +14,13 @@ deps =
 changedir =
   semconv: openinference-semantic-conventions/
   openai: instrumentation/openinference-instrumentation-openai/
+  llama_index: instrumentation/openinference-instrumentation-llama-index/
 commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
   openai: pip install {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
   openai-latest: pip install -U openai
+  llama_index: pip install {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test]
+  llama_index-latest: pip install -U llama_index
 commands =
   ruff: ruff format . --config {toxinidir}/ruff.toml
   ruff: ruff check . --fix --config {toxinidir}/ruff.toml
