chore: include tests for mypy

--- a/python/mypy.ini
+++ b/python/mypy.ini
@@ -1,5 +1,11 @@
 [mypy]
 strict = true
+explicit_package_bases = true
+exclude = (?x)(
+          ^examples    # examples folder
+          | ^dist      # dist folder
+          | ^sdist     # sdist folder
+          )
 
 [mypy-wrapt]
 ignore_missing_imports = True
