--- a/python/tox.ini
+++ b/python/tox.ini
@@ -20,9 +20,9 @@ commands_pre =
 commands =
   ruff: ruff format . --config {toxinidir}/ruff.toml
   ruff: ruff check . --fix --config {toxinidir}/ruff.toml
-  mypy: mypy --config-file {toxinidir}/mypy.ini --explicit-package-bases {posargs:src}
+  mypy: mypy --config-file {toxinidir}/mypy.ini {posargs:.}
   test: pytest {posargs:tests}
   ci: ruff format . --diff --config {toxinidir}/ruff.toml
   ci: ruff check . --no-fix --config {toxinidir}/ruff.toml
-  ci: mypy --config-file {toxinidir}/mypy.ini --explicit-package-bases src
+  ci: mypy --config-file {toxinidir}/mypy.ini .
   ci: pytest tests
