--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,6 +3,7 @@ isolated_build = True
 skipsdist = True
 envlist =
   py3{8,11}-ci-semconv
+  py3{8,11}-ci-{boto,boto-latest}
   py3{8,11}-ci-{openai,openai-latest}
 
 [testenv]
@@ -12,9 +13,12 @@ deps =
   -r dev-requirements.txt
 changedir =
   semconv: openinference-semantic-conventions/
+  boto: instrumentation/openinference-instrumentation-boto/
   openai: instrumentation/openinference-instrumentation-openai/
 commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
+  boto: pip install {toxinidir}/instrumentation/openinference-instrumentation-boto[test]
+  boto-latest: pip install -U boto3
   openai: pip install {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
   openai-latest: pip install -U openai
 commands =
