chore: add llama-index instrumentor to release please

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -13,6 +13,10 @@
     "python/instrumentation/openinference-instrumentation-openai": {
       "package-name": "python-openinference-instrumentation-openai",
       "release-type": "python"
+    },
+    "python/instrumentation/openinference-instrumentation-llama-index": {
+      "package-name": "python-openinference-instrumentation-llama-index",
+      "release-type": "python"
     }
   }
 }
