--- a/js/examples/openai/package.json
+++ b/js/examples/openai/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc --build tsconfig.json",
-    "start": "node dist/index.js",
+    "start": "node --import ./dist/instrumentation.js dist/index.js",
     "type:check": "tsc --noEmit"
   },
   "author": "mikyo@arize.com",
