Add docker file

--- a/python/examples/llama-index/backend/pyproject.toml
+++ b/python/examples/llama-index/backend/pyproject.toml
@@ -2,7 +2,7 @@
 name = "app"
 version = "0.1.0"
 description = ""
-authors = ["Marcus Schiesser <mail@marcusschiesser.de>"]
+authors = ["Arize OSS <oss@arize.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
