--- a/js/package.json
+++ b/js/package.json
@@ -37,5 +37,7 @@
     "node": ">=10",
     "pnpm": ">=3"
   },
-  "eslintIgnore": ["examples/**/*"]
+  "eslintIgnore": [
+    "examples/**/*"
+  ]
 }
