Try catching all botocore modules

--- a/python/mypy.ini
+++ b/python/mypy.ini
@@ -13,5 +13,5 @@ ignore_missing_imports = True
 [mypy-boto3]
 ignore_missing_imports = True
 
-[mypy-botocore]
+[mypy-botocore.*]
 ignore_missing_imports = True
