--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,8 +3,8 @@ isolated_build = True
 skipsdist = True
 envlist =
   py3{8,11}-ci-semconv
-  py3{8,11}-ci-{openai,openai-latest}
-  py3{8,11}-ci-{llama_index,llama_index-latest}
+  py3{8,11}-ci-{openai,openai-latest,dspy,dspy-latest}
+  py3{8,11}-ci-{llama_index,llama_index-latest,dspy,dspy-latest}
 
 [testenv]
 package = wheel
@@ -15,12 +15,15 @@ changedir =
   semconv: openinference-semantic-conventions/
   openai: instrumentation/openinference-instrumentation-openai/
   llama_index: instrumentation/openinference-instrumentation-llama-index/
+  dspy: instrumentation/openinference-instrumentation-dspy/
 commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
   openai: pip install {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
   openai-latest: pip install -U openai
   llama_index: pip install {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test]
   llama_index-latest: pip install -U llama_index
+  dspy: pip install {toxinidir}/instrumentation/openinference-instrumentation-dspy[test]
+  dspy-latest: pip install -U dspy-ai
 commands =
   ruff: ruff format . --config {toxinidir}/ruff.toml
   ruff: ruff check . --fix --config {toxinidir}/ruff.toml
