--- a/python/mypy.ini
+++ b/python/mypy.ini
@@ -9,3 +9,7 @@ exclude = (?x)(
 
 [mypy-wrapt]
 ignore_missing_imports = True
+[mypy-dspy.*]
+ignore_missing_imports = True
+[mypy-dsp.*]
+ignore_missing_imports = True
