--- a/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
@@ -65,3 +65,10 @@ strict = true
 exclude = [
   "dist/",
 ]
+
+[tool.ruff]
+exclude = [".git", "__pycache__", "docs/source/conf.py", "*_pb2.py*", "*.pyi"]
+ignore-init-module-imports = true
+line-length = 100
+select = ["E", "F", "W", "I"]
+target-version = "py38"
