make dspy min 3.9

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,8 +3,9 @@ isolated_build = True
 skipsdist = True
 envlist =
   py3{8,11}-ci-semconv
-  py3{8,11}-ci-{openai,openai-latest,dspy,dspy-latest}
-  py3{8,11}-ci-{llama_index,llama_index-latest,dspy,dspy-latest}
+  py3{8,11}-ci-{openai,openai-latest}
+  py3{8,11}-ci-{llama_index,llama_index-latest}
+  py3{9,11}-ci-{dspy,dspy-latest}
 
 [testenv]
 package = wheel
