docker compose running with productionized builds

--- a/js/examples/llama-index-express/compose.yml
+++ b/js/examples/llama-index-express/compose.yml
@@ -1,4 +1,8 @@
 services:
+  phoenix:
+    image: arizephoenix/phoenix:latest
+    ports:
+      - "6006:6006"
   backend:
     build: backend
     ports:
@@ -6,11 +10,8 @@ services:
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - COLLECTOR_ENDPOINT=http://phoenix:6006/v1/traces
+      - PROD_CORS_ORIGIN=http://localhost:3000
   frontend:
     build: frontend
     ports:
       - "3000:3000"
-  phoenix:
-    image: arizephoenix/phoenix:latest
-    ports:
-      - "6006:6006"
