--- a/js/examples/llama-index-express/backend/package.json
+++ b/js/examples/llama-index-express/backend/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsup ./index.ts ./instrumentation.ts --format cjs --dts",
+    "build": "tsup --entry ./index.ts --entry ./instrumentation.ts --format cjs --dts",
     "start": "node --import ./dist/instrumentation.cjs ./dist/index.cjs",
     "dev": "concurrently \"tsup ./index.ts ./instrumentation.ts --format cjs --dts --watch\" \"nodemon --inspect --import ./dist/instrumentation.cjs -q ./dist/index.cjs\"",
     "type:check": "tsc --noEmit"
